// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render PublisherLabel with no prefLabel 1`] = `
<span>
  Eies av
   
  <strong>
    Ramsund og rognan revisjon
  </strong>
</span>
`;

exports[`should render PublisherLabel with no props 1`] = `""`;

exports[`should render PublisherLabel with publisher 1`] = `
<span>
  Eies av
   
  <strong>
    Ramsund og Rognan revisjon
  </strong>
</span>
`;
